@@ -1,5 +1,15 @@
 2007-03-15  Jakub Jelinek  <jakub@redhat.com>
 
+	[BZ #4181]
+	* inet/inet6_opt.c (add_padding): Only insert padding if npad > 0.
+	(inet6_opt_append): Don't check extlen is big enough if extbuf
+	is NULL.
+	(inet6_opt_finish): Likewise.
+	* inet/Makefile (tests): Add test-inet6_opt.
+	* inet/test-inet6_opt.c: New test.
+
+2007-03-15  Jakub Jelinek  <jakub@redhat.com>
+
 	[BZ #4130]
 	* login/utmp_file.c (setutent_file): Use O_LARGEFILE for
 	open_not_cancel_2.
